--- a/emacs/.gitignore
+++ b/emacs/.gitignore
@@ -1,13 +1,9 @@
-/.bm-repository
 /custom.el
 /history
-/howm/
+/irony/
 /network-security.data
 /projectile.cache
 /recentf
-/skk/*
-/undohist/
-!/skk/init
 
 # Created by https://www.gitignore.io/api/emacs
 
