--- a/tmux.conf
+++ b/tmux.conf
@@ -7,14 +7,11 @@ bind-key C-q send-prefix
 set-option -g base-index 1
 set-option -g buffer-limit 200
 set-option -g default-shell "/usr/local/bin/zsh"
-set-option -g default-terminal "screen-256color"
-set-option -g history-limit 20000
 set-option -g mouse on
 set-option -g status-right ""
 
-if-shell 'test "$(uname -s)" = Darwin' "source-file $HOME/.tmux/darwin.conf" ""
-
 # Tmux Plugin Manager
 set-option -g @plugin "tmux-plugins/tpm"
-set-option -g @plugin "seebi/tmux-colors-solarized"
+set-option -g @plugin 'tmux-plugins/tmux-sensible'
+set-option -g @plugin "tmux-plugins/tmux-yank"
 run-shell $HOME/.tmux/plugins/tpm/tpm
