プラグインを追加

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,10 +8,19 @@ set-option -g base-index 1
 set-option -g buffer-limit 200
 set-option -g default-shell "/usr/local/bin/zsh"
 set-option -g mouse on
-set-option -g status-right ""
 
 # Tmux Plugin Manager
 set-option -g @plugin "tmux-plugins/tpm"
-set-option -g @plugin 'tmux-plugins/tmux-sensible'
+set-option -g @plugin "tmux-plugins/tmux-copycat"
+set-option -g @plugin "tmux-plugins/tmux-open"
+set-option -g @plugin "tmux-plugins/tmux-pain-control"
+set-option -g @plugin "tmux-plugins/tmux-prefix-highlight"
+set-option -g @plugin "tmux-plugins/tmux-resurrect"
+set-option -g @plugin "tmux-plugins/tmux-sensible"
+set-option -g @plugin "tmux-plugins/tmux-sidebar"
 set-option -g @plugin "tmux-plugins/tmux-yank"
+
+set-option -g @prefix_highlight_show_copy_mode "on"
+set-option -g status-right "#{prefix_highlight} | %Y-%m-%d %H:%M"
+
 run-shell $HOME/.tmux/plugins/tpm/tpm
