--- a/tmux.conf
+++ b/tmux.conf
@@ -9,10 +9,12 @@ set-option -g buffer-limit 200
 set-option -g default-shell "/usr/local/bin/zsh"
 set-option -g mouse on
 
+# OSごとの設定を読み込む
+if-shell 'test "$(uname -s)" = Darwin' "source-file $HOME/.tmux/darwin.conf" ""
+
 # Tmux Plugin Manager
 set-option -g @plugin "tmux-plugins/tpm"
 set-option -g @plugin "tmux-plugins/tmux-copycat"
-set-option -g @plugin "tmux-plugins/tmux-open"
 set-option -g @plugin "tmux-plugins/tmux-pain-control"
 set-option -g @plugin "tmux-plugins/tmux-prefix-highlight"
 set-option -g @plugin "tmux-plugins/tmux-resurrect"
