--- a/tmux.conf
+++ b/tmux.conf
@@ -14,13 +14,13 @@ if-shell 'test "$(uname -s)" = Darwin' "source-file $HOME/.tmux/darwin.conf" ""
 
 # Tmux Plugin Manager
 set-option -g @plugin "tmux-plugins/tpm"
-set-option -g @plugin "tmux-plugins/tmux-copycat"
 set-option -g @plugin "tmux-plugins/tmux-pain-control"
 set-option -g @plugin "tmux-plugins/tmux-prefix-highlight"
 set-option -g @plugin "tmux-plugins/tmux-resurrect"
 set-option -g @plugin "tmux-plugins/tmux-sensible"
 set-option -g @plugin "tmux-plugins/tmux-sidebar"
 set-option -g @plugin "tmux-plugins/tmux-yank"
+set-option -g @plugin "mahori/tmux-copycat"
 
 set-option -g @prefix_highlight_show_copy_mode "on"
 set-option -g status-right "#{prefix_highlight} | %Y-%m-%d %H:%M"
