zshの場所によってdefault-shellを設定

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,8 +6,11 @@ bind-key C-q send-prefix
 # 挙動を変更
 set-option -g base-index 1
 set-option -g buffer-limit 200
-set-option -g default-shell "/usr/local/bin/zsh"
 set-option -g mouse on
+
+if-shell 'test -e "/usr/local/bin/zsh"' \
+         'set-option -g default-shell "/usr/local/bin/zsh"' \
+         'set-option -g default-shell "/bin/zsh"'
 
 # OSごとの設定を読み込む
 if-shell 'test "$(uname -s)" = Darwin' "source-file $HOME/.tmux/darwin.conf" ""
